--- a/package.json
+++ b/package.json
@@ -25,7 +25,10 @@
     "@capacitor/keyboard": "4.1.0",
     "@capacitor/status-bar": "4.1.0",
     "@ionic/angular": "^6.1.9",
+    "angular2-uuid": "^1.1.1",
+    "bootstrap": "^5.2.2",
     "ionicons": "^6.0.3",
+    "ngx-image-compress": "^13.1.13",
     "rxjs": "~7.5.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
