--- a/angular.json
+++ b/angular.json
@@ -29,10 +29,15 @@
                 "glob": "**/*.svg",
                 "input": "node_modules/ionicons/dist/ionicons/svg",
                 "output": "./svg"
+              },
+              {
+                "glob": "**/*",
+                "input": "node_modules/monaco-editor",
+                "output": "/assets/monaco/"
               }
             ],
             "styles": [
-              "src/theme/variables.scss", 
+              "src/theme/variables.scss",
               "src/global.scss",
               "node_modules/bootstrap/dist/css/bootstrap.min.css"
             ],
@@ -115,7 +120,10 @@
                 "output": "./svg"
               }
             ],
-            "styles": ["src/theme/variables.scss", "src/global.scss"],
+            "styles": [
+              "src/theme/variables.scss",
+              "src/global.scss"
+            ],
             "scripts": []
           },
           "configurations": {
