--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "angular2-uuid": "^1.1.1",
     "bootstrap": "^5.2.2",
     "ionicons": "^6.0.3",
+    "jigsaw-puzzle": "^1.1.10",
     "monaco-editor": "^0.33.0",
     "ngx-image-compress": "^13.1.13",
     "ngx-monaco-editor-v2": "^14.0.4",
